[package]
name = "wires"
version = "0.1.0"
edition = "2024"

[dependencies]
yrs = { version = "0.23.1", features = ["sync"] }



futures-util = { version = "0.3.31", features = ["sink"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
axum = {version="0.8.3", features=["ws"]}
bytes = "1.6"
tower-http = {version="0.6.2", features=["fs"]}
tokio-tungstenite = "0.21"
url = "2.4.10"
rand = "0.8"
thiserror = "2.0.12"

[dev-dependencies]
